--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,3 +1,8 @@
+html{
+    font-size: 62,5%;
+}
+
+
 body{
     margin: 0;
 }
@@ -42,3 +47,10 @@ body{
 .header-icon{
     cursor: pointer;
 }
+
+.main-menu-list {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+}
+
