--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,17 +1,24 @@
-html{
-    font-size: 62,5%;
+html {
+    font-size: 62.5%;
+    font-family: 'Quicksand', sans-serif, 'Times New Roman', Times, serif;
 }
 
+*{
+    font-family: 'Quicksand', sans-serif!important;
+}
 
-body{
+body {
+    padding: 0;
     margin: 0;
+    height: 2048px;
 }
 
-.header{
+.header {
     width: 100%;
-    border-bottom: 1px solid rgba(1,1,1,0.4);
+    border-bottom: 1px solid rgba(1, 1, 1, 0.4);
 }
 
+/* --------------HEADER-------------- */
 .header-nav-up {
     display: flex;
     flex-direction: row;
@@ -20,10 +27,10 @@ body{
     padding: 12px 0;
     justify-content: center;
 }
-  
-.ivisible-bar, 
-.wrap-logo, 
-.utility-list{
+
+.ivisible-bar,
+.wrap-logo,
+.utility-list {
     width: 33%;
 }
 
@@ -44,8 +51,9 @@ body{
     margin: 0 12px;
 }
 
-.header-icon{
+.header-icon {
     cursor: pointer;
+    font-size: 2.4rem;
 }
 
 .main-menu-list {
@@ -54,3 +62,212 @@ body{
     justify-content: center;
 }
 
+.main-menu-item {
+    font-size: 1.6rem;
+    margin: 0 1.2rem;
+}
+
+.main-menu-item:hover {
+    border-bottom: 1px solid;
+    cursor: pointer;
+}
+
+/* -------NEW-PRODUCT_SECTION------- */
+
+.new-product {
+    margin: 0 -2px 40px;
+    padding: 0;
+}
+
+.new-product-title {
+    font-size: 3.2rem;
+    font-weight: 400;
+    text-align: center;
+    margin: 5rem 0;
+    color: #518372;
+}
+
+.product-block{
+    width: 24rem;
+    margin: 0 15px 0 15px;
+}
+
+.product-img-wrap {
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.product-name {
+    margin-top: 1.2rem;
+    font-size: 1.6rem;
+    font-weight: 500;
+    color: #518372;
+}
+
+.product-price{
+    font-size: 1.4rem;
+}
+
+/* ------TOP-PERFUME-BRAND-SECTION------ */
+
+.top-pf-brand-container{
+    margin: 0;
+    padding: 0;
+    height: 45rem;
+}
+
+.top-pf-brands-block {
+    height: 100%;
+    display: flex;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.top-pf-brand-caption {
+    position: absolute;
+    width: 100%;
+    padding: 5rem;
+    bottom: 5rem;
+    color: white;
+}
+
+.top-pf-name {
+    font-size: 2.2rem;
+    font-weight: 500;
+    margin-bottom: 4px;
+}
+
+
+/* CSS */
+.button-57 {
+  position: relative;
+  overflow: hidden;
+  border: 1px solid #18181a;
+  color: #18181a;
+  display: inline-block;
+  font-size: 15px;
+  line-height: 15px;
+  padding: 14px 20px;
+  text-decoration: none;
+  cursor: pointer;
+  background: #fff;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-57 span:first-child {
+  position: relative;
+  transition: color 600ms cubic-bezier(0.48, 0, 0.12, 1);
+  z-index: 10;
+}
+
+.button-57 span:last-child {
+    color: white;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    transition: all 500ms cubic-bezier(0.48, 0, 0.12, 1);
+    z-index: 100;
+    opacity: 0;
+    top: 64%;
+    left: 50%;
+    transform: translateY(225%) translateX(-50%);
+    height: 14px;
+    width: 7rem;
+    line-height: 13px;
+}
+
+.button-57:after {
+  content: "";
+  position: absolute;
+  bottom: -50%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  transform-origin: bottom center;
+  transition: transform 600ms cubic-bezier(0.48, 0, 0.12, 1);
+  transform: skewY(9.3deg) scaleY(0);
+  z-index: 50;
+}
+
+.button-57:hover:after {
+  transform-origin: bottom center;
+  transform: skewY(9.3deg) scaleY(2);
+}
+
+.button-57:hover span:last-child {
+  transform: translateX(-50%) translateY(-100%);
+  opacity: 1;
+  transition: all 900ms cubic-bezier(0.48, 0, 0.12, 1);
+}
+
+/* About us---------Working on it section--------- */
+.processing-section{
+    width: 100%;
+    height: 10rem;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    color: white;
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    margin: 20px 0;
+}
+
+.processing-img{
+    width: 6rem;
+}
+.processing-text{
+    color: black;
+}
+
+/* ---------------Footer section--------------- */
+.footer{
+    margin-top: 32px;
+    /* border-top: 1px solid rgba(0, 0, 0, 0.2); */
+}
+
+.footer-top{
+    padding: 18px 20px;
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.footer-inner-block{
+
+}
+
+.footer-inner-title{
+    font-size: 2rem;
+    margin-bottom: 20px;
+    line-height: 30px;
+    color: #2a5f4b;
+}
+
+.footer-container{
+
+}
+
+.footer-shop-logo{
+    width: 15rem;
+}
+
+.inner-footer-text {
+    font-size: 1.4rem;
+    margin-bottom: 10px;
+}
+
+.copyright {
+    background-color: #ccc;
+    font-size: 1.2rem;
+    display: block;
+    text-align: center;
+    padding: 0.8rem 0;
+    margin: 2.2rem 0 0;
+}
