added some icon, finish 88% of login and signup page

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -9,3 +9,7 @@ html {
     font-family: 'Quicksand', sans-serif, 'Times New Roman', Times, serif;
     box-sizing: border-box;
 }
+
+:root{
+    --main-page-color: #518372;
+}
