--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -3,14 +3,14 @@ html {
     font-family: 'Quicksand', sans-serif, 'Times New Roman', Times, serif;
 }
 
-*{
-    font-family: 'Quicksand', sans-serif!important;
+* {
+    font-family: 'Quicksand', sans-serif !important;
 }
 
 body {
     padding: 0;
     margin: 0;
-    height: 2048px;
+    /* height: 2048px; */
 }
 
 .header {
@@ -87,7 +87,7 @@ body {
     color: #518372;
 }
 
-.product-block{
+.product-block {
     width: 24rem;
     margin: 0 15px 0 15px;
 }
@@ -107,13 +107,13 @@ body {
     color: #518372;
 }
 
-.product-price{
+.product-price {
     font-size: 1.4rem;
 }
 
 /* ------TOP-PERFUME-BRAND-SECTION------ */
 
-.top-pf-brand-container{
+.top-pf-brand-container {
     margin: 0;
     padding: 0;
     height: 45rem;
@@ -145,26 +145,26 @@ body {
 
 /* CSS */
 .button-57 {
-  position: relative;
-  overflow: hidden;
-  border: 1px solid #18181a;
-  color: #18181a;
-  display: inline-block;
-  font-size: 15px;
-  line-height: 15px;
-  padding: 14px 20px;
-  text-decoration: none;
-  cursor: pointer;
-  background: #fff;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
+    position: relative;
+    overflow: hidden;
+    border: 1px solid #18181a;
+    color: #18181a;
+    display: inline-block;
+    font-size: 15px;
+    line-height: 15px;
+    padding: 14px 20px;
+    text-decoration: none;
+    cursor: pointer;
+    background: #fff;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
 }
 
 .button-57 span:first-child {
-  position: relative;
-  transition: color 600ms cubic-bezier(0.48, 0, 0.12, 1);
-  z-index: 10;
+    position: relative;
+    transition: color 600ms cubic-bezier(0.48, 0, 0.12, 1);
+    z-index: 10;
 }
 
 .button-57 span:last-child {
@@ -184,32 +184,32 @@ body {
 }
 
 .button-57:after {
-  content: "";
-  position: absolute;
-  bottom: -50%;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  transform-origin: bottom center;
-  transition: transform 600ms cubic-bezier(0.48, 0, 0.12, 1);
-  transform: skewY(9.3deg) scaleY(0);
-  z-index: 50;
+    content: "";
+    position: absolute;
+    bottom: -50%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    transform-origin: bottom center;
+    transition: transform 600ms cubic-bezier(0.48, 0, 0.12, 1);
+    transform: skewY(9.3deg) scaleY(0);
+    z-index: 50;
 }
 
 .button-57:hover:after {
-  transform-origin: bottom center;
-  transform: skewY(9.3deg) scaleY(2);
+    transform-origin: bottom center;
+    transform: skewY(9.3deg) scaleY(2);
 }
 
 .button-57:hover span:last-child {
-  transform: translateX(-50%) translateY(-100%);
-  opacity: 1;
-  transition: all 900ms cubic-bezier(0.48, 0, 0.12, 1);
+    transform: translateX(-50%) translateY(-100%);
+    opacity: 1;
+    transition: all 900ms cubic-bezier(0.48, 0, 0.12, 1);
 }
 
 /* About us---------Working on it section--------- */
-.processing-section{
+.processing-section {
     width: 100%;
     height: 10rem;
     display: flex;
@@ -221,40 +221,37 @@ body {
     margin: 20px 0;
 }
 
-.processing-img{
+.processing-img {
     width: 6rem;
 }
-.processing-text{
+
+.processing-text {
     color: black;
 }
 
 /* ---------------Footer section--------------- */
-.footer{
-    margin-top: 32px;
+.footer {
+    /* margin-top: 32px; */
     /* border-top: 1px solid rgba(0, 0, 0, 0.2); */
 }
 
-.footer-top{
+.footer-top {
     padding: 18px 20px;
     border-top: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-.footer-inner-block{
+.footer-inner-block {}
 
-}
-
-.footer-inner-title{
+.footer-inner-title {
     font-size: 2rem;
     margin-bottom: 20px;
     line-height: 30px;
     color: #2a5f4b;
 }
 
-.footer-container{
+.footer-container {}
 
-}
-
-.footer-shop-logo{
+.footer-shop-logo {
     width: 15rem;
 }
 
@@ -270,4 +267,169 @@ body {
     text-align: center;
     padding: 0.8rem 0;
     margin: 2.2rem 0 0;
+}
+
+/* Login Page Css */
+.divider:after,
+.divider:before {
+    content: "";
+    flex: 1;
+    height: 1px;
+    background: #eee;
+}
+
+.login-signup-container.row {
+    min-height: 66.7rem;
+}
+
+
+.login-signup-block {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-right: 1px solid #ededed;
+    padding: 10rem;
+}
+
+.login-signup-title {
+    font-size: 3rem;
+    font-weight: 600;
+    color: var(--main-page-color);
+    margin-bottom: 2rem;
+}
+
+.slash-decor {
+    border: 1px solid black;
+    width: 14%;
+}
+
+.login-page-logo {
+    width: 35rem;
+}
+
+.login-signup-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
+.user-login-signup-input {
+    height: 55px;
+    background: #ededed;
+    padding: 0 20px;
+    margin: 10px 0;
+    color: #001812;
+    font-size: 1.4rem;
+    font-weight: 500;
+    border: 1px solid transparent;
+    border-radius: 2px;
+
+}
+
+/* adjust radio button */
+#customer-gender-wrap {
+    margin: 8px 0;
+}
+
+input[type="radio"] {
+    display: none;
+}
+
+input[type="radio"]+label {
+    font-size: 1.4rem;
+    position: relative;
+    cursor: pointer;
+    padding-left: 28px;
+    margin: 0 20px 0 0;
+}
+
+input[type="radio"]+label::before,
+input[type="radio"]+label::after {
+    content: "";
+    position: absolute;
+    border-radius: 50%;
+    transition: all 0.3s ease;
+}
+
+input[type="radio"]+label::before {
+    top: 0;
+    left: 0;
+    width: 18px;
+    height: 18px;
+    background: #487264;
+    box-shadow: inset 0 0 0 18px #efefef;
+}
+
+input[type="radio"]:checked+label:before {
+    box-shadow: inset 0 0 0 4px #efefef;
+}
+
+input[type="radio"]+label::after {
+    top: 49%;
+    left: 9px;
+    width: 54px;
+    height: 54px;
+    opacity: 0;
+    background: rgba(255, 255, 255, 0.3);
+    transform: translate(-50%, -50%) scale(0);
+}
+
+input[type="radio"]:checked+label::after {
+    transform: translate(-50%, -50%) scale(1);
+    animation: ripple 1s none;
+}
+
+label {
+    display: inline-block;
+    max-width: 100%;
+    font-weight: 700;
+}
+
+
+
+.action-bottom {
+    margin: 1rem 0 1.2rem;
+}
+
+.action-other-box,
+.action-to-home {
+    margin-left: 20px;
+    font-size: 1.4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.action-other-box a {
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+}
+
+.action-other-box a:hover {
+    color: black;
+    font-weight: 500;
+    color: var(--main-page-color);
+}
+
+.action-to-home {
+    margin: 24px 0 0;
+}
+
+.action-to-home a img {
+    width: 24px;
+}
+
+.action-to-home a {
+    font-size: 1.4rem;
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+    transition: color 150ms linear;
+}
+
+.action-to-home a:hover{
+    color: var(--main-page-color);
 }
