--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -62,14 +62,54 @@ body {
     justify-content: center;
 }
 
+.header-nav-link{
+    text-decoration: none;
+    color: black;
+}
+
 .main-menu-item {
     font-size: 1.6rem;
     margin: 0 1.2rem;
 }
 
-.main-menu-item:hover {
+/* .main-menu-item:hover {
     border-bottom: 1px solid;
     cursor: pointer;
+} */
+/* BANNER */
+#banner{
+    position: relative;
+}
+
+.home-banner{
+    width: 100%;
+    height: 65rem;
+    object-fit: cover;
+    margin: auto;
+    animation: fadeIn ease 1s;
+}
+
+.button-navigation-banner {
+    font-size: 21px;
+    border: 1px solid #ededed;
+    background-color: white;
+    border-radius: 12rem;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+}
+
+.prev-banner-button {
+    top: 50%;
+}
+
+.next-banner-button {
+    right: 0;
+    top: 50%;
+}
+
+.button-navigation-banner{
+
 }
 
 /* -------NEW-PRODUCT_SECTION------- */
@@ -97,7 +137,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    /* box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.2); */
+    border: 0.5px solid rgba(0,0,0,0.3);
 }
 
 .product-name {
@@ -437,3 +478,28 @@ label {
 .action-to-home a:hover{
     color: var(--main-page-color);
 }
+
+
+
+
+
+
+/* Key frame */
+@keyframes FadeIn{
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+    
+}
+
+@keyframes slide-animation {
+    from {
+      transform: translateX(-100%);
+    }
+    to {
+      transform: translateX(100%);
+    }
+  }
