--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -1,15 +1,46 @@
-.home-demo .item {
-    background: #ff3f4d;
+.owl-carou-container {
+    padding-right: 5px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
 }
-.home-demo h2 {
-    color: #FFF;
+
+.item {
+    width: 240px;
+}
+
+.owl-nav {
+    font-size: 30px;
+    position: absolute;
+}
+
+
+.owl-prev span,
+.owl-next span {
+    display: flex;
     text-align: center;
-    padding: 5rem 0;
-    margin: 0;
-    font-style: italic;
-    font-weight: 300;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+    height: 40px;
+    width: 40px;
+    background-color: white;
+    border-radius: 30px;
+    border: 0.2px solid rgba(0,0,0,0.2);
 }
+
+.owl-prev span {
+    position: absolute;
+    top: -19rem;
+    left: -0.8rem;
+}
+
+.owl-next span {
+    position: absolute;
+    top: -19rem;
+    right: -133rem;
+}
+
 .owl-dots {
     display: none;
 }
-
