--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -1,3 +1,16 @@
+/* This will hide the updown arrow of input type number */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+/* ----------------- */
+
 .body-container{
     
 }
@@ -39,7 +52,6 @@
 .products-body{
     position: relative;
     margin-top: 5rem;
-    height: 2000px;
 }
 
 .left-nav-filter {
@@ -66,4 +78,131 @@
 .category-item {
     font-size: 1.2rem;
     line-height: 26px;
+}
+
+
+.product-list-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 15px 0 0;
+}
+
+.category-title {
+    font-size: 3rem;
+    font-weight: 700;
+    color: var(--main-page-color);
+}
+
+.category-sort-options {
+    font-size: 1.4rem;
+}
+
+.product-list-container {
+    padding-right: 15px;
+}
+
+.product-items {
+    margin-bottom: 20px;
+}
+
+.pagination {
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    height: 5rem;
+}
+
+.page-node {
+    font-size: 1.5rem;
+    font-weight: 400;
+    text-decoration: none;
+    color: black;
+    margin: 5px 5px 0;
+}
+
+.next-page-node img {
+    width: 20px;
+    padding-top: 2px;
+    margin-left: 2rem;
+}
+
+/* -----------Product Detail Css----------- */
+.product-detail-container {
+    padding: 35px 15px 0 0;
+    margin-bottom: 40px;
+}
+
+.product-detail-wrap{
+    padding: 0;
+    width: 46.5rem;
+}
+
+.product-wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.product-detail-name {
+    color: var(--main-page-color);
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+.product-detail-price {
+    font-size: 1.8rem;
+    font-weight: 600;
+    color: rgba(255,0,0);
+    margin: 20px 0;
+    padding: 10px 0;
+    border-top: 1px dotted #dfe0e1;
+    border-bottom: 1px dotted #dfe0e1;
+}
+
+.buy-area {
+    display: flex;
+    flex-direction: column;
+}
+
+.select-quantity-area .quantity-btn {
+    float: left;
+    height: 32px;
+    width: 32px;
+    font-weight: 600;
+    font-size: 16px;
+    border: 1px solid #f5f5f5;
+    background: #f5f5f5;
+}
+
+.select-quantity-area .quantity-selector {
+    float: left;
+    height: 32px;
+    width: 12rem;
+    text-align: center;
+    font-weight: 500;
+    font-size: 16px;
+    border: 1px solid #f5f5f5;
+    outline: none;
+}
+
+.add-to-cart-btn {
+    margin: 15px 0;
+    width: 23rem;
+}
+
+.button-57 span:last-child{
+    width: 10rem;
+}
+
+.product-detail-des-title {
+    color: var(--main-page-color);
+    font-size: 1.4rem;
+    font-weight: 500;
+    border-bottom: 1px solid;
+    margin-bottom: 14px;
+}
+
+.product-detail-des p {
+    font-size: 1.6rem;
 }
