--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -51,10 +51,104 @@ body {
     margin: 0 12px;
 }
 
+.utility-item:nth-child(2):hover{
+    rotate: -10deg;
+}
+
 .header-icon {
     cursor: pointer;
     font-size: 2.4rem;
 }
+
+/* Search box */
+.search-box-container {
+    background-color: rgba(0, 0, 0, 0.4);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+    display: none;
+  }
+  
+  .search-box {
+    right: 0;
+    top: 0;
+    bottom: 0;
+    position: absolute;
+    background-color: white;
+    width: 35%;
+    padding: 45px 50px 0;
+    animation: modalSwipeFromRight ease 0.8s;
+  }
+  
+  .search-box-header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 35px;
+  }
+  
+  .search-title {
+    font-size: 1.8rem;
+    font-weight: 500;
+  }
+  
+  .search-box-exit {
+    height: 3rem;
+    width: 3rem;
+  }
+  
+  .search-box-exit:hover {
+    cursor: pointer;
+    background: rgb(216 208 208);
+  }
+  
+  .search-wrapper {
+    position: relative;
+  }
+  
+  .search-input-real-time {
+    width: 100%;
+    border: none;
+    background-color: rgba(0, 0, 0, 0.07);
+    font-size: 1.8rem;
+    padding: 15px 10px;
+    border-radius: 4px;
+    outline: none;
+  }
+  
+  .search-submit-button {
+    position: absolute;
+    left: 89%;
+    bottom: 25%;
+    width: 30px;
+    height: 30px;
+  }
+  
+  .search-submit-button:hover {
+    rotate: -10deg;
+    cursor: pointer;
+  }
+  
+  .search-box-container.open {
+    display: flex;
+  }
+  
+  
+  @keyframes modalSwipeFromRight {
+    from {
+      transform: translateX(70%);
+    }
+  
+    to {
+      transform: translateX(0);
+    }
+  }
+/* End of search modal   */
+
 
 .main-menu-list {
     list-style: none;
@@ -65,17 +159,22 @@ body {
 .header-nav-link{
     text-decoration: none;
     color: black;
+    cursor: default;
 }
 
 .main-menu-item {
     font-size: 1.6rem;
     margin: 0 1.2rem;
+    border: none;
+    background-color: white;
+    padding: 0;
 }
 
-/* .main-menu-item:hover {
-    border-bottom: 1px solid;
+ .main-menu-item:hover {
+    color: var(--main-page-color);
     cursor: pointer;
-} */
+    font-weight: 600;
+} 
 /* BANNER */
 #banner{
     position: relative;
@@ -204,7 +303,8 @@ body {
 .button-57 span:first-child {
     position: relative;
     transition: color 600ms cubic-bezier(0.48, 0, 0.12, 1);
-    z-index: 10;
+    /* z-index: 10; */
+    z-index: 1;
 }
 
 .button-57 span:last-child {
@@ -213,7 +313,8 @@ body {
     position: absolute;
     bottom: 0;
     transition: all 500ms cubic-bezier(0.48, 0, 0.12, 1);
-    z-index: 100;
+    /* z-index: 100; */
+    z-index: 3;
     opacity: 0;
     top: 64%;
     left: 50%;
@@ -234,7 +335,7 @@ body {
     transform-origin: bottom center;
     transition: transform 600ms cubic-bezier(0.48, 0, 0.12, 1);
     transform: skewY(9.3deg) scaleY(0);
-    z-index: 50;
+    z-index: 2;
 }
 
 .button-57:hover:after {
@@ -370,6 +471,12 @@ body {
     outline: none;
     border-color: #ededed;
     background: #fff;
+}
+
+.action-login-google-icon{
+    background: white;
+    border-radius: 4px;
+    margin-left: 8px;
 }
 
 /* adjust radio button */
