--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -15,13 +15,6 @@ input[type=number] {
     
 }
 
-.products-banner{
-    height: 32rem;
-    width: 100%;
-    display: block;
-    object-fit: cover;
-    margin: auto;
-}
 
 .bread-crumb-container {
     display: block;
@@ -49,6 +42,14 @@ input[type=number] {
     margin: 0 6px;
 }
 
+.products-banner{
+    height: 32rem;
+    width: 100%;
+    display: block;
+    object-fit: cover;
+    margin: auto;
+}
+
 .products-body{
     position: relative;
     margin-top: 5rem;
@@ -60,6 +61,45 @@ input[type=number] {
     top: 0;
 }
 
+/* Tree node css */
+#tree {
+    font-family: sans-serif;
+    font-size: 14px;
+    line-height: 1.5;
+}
+
+#tree ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+#tree input[type="checkbox"] {
+    display: none;
+}
+
+#tree label {
+    cursor: pointer;
+    transition: color 0.2s ease-in-out;
+}
+
+#tree label:hover {
+    color: var(--main-page-color);
+}
+
+#tree li>ul {
+    display: none;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-in-out;
+}
+
+#tree input[type="checkbox"]:checked~ul {
+    display: block;
+    max-height: 500px;
+}
+
+/* End of tree node */
 .main-filter-container{
     text-decoration: none;
     color: black;
@@ -78,32 +118,53 @@ input[type=number] {
 .category-item {
     font-size: 1.2rem;
     line-height: 26px;
+    margin-left: 20px;
+    text-decoration: none;
+    color: rgba(0,0,0,0.8);
+    margin-left: 20px;
 }
 
+.category-item:hover {
+    font-weight: 600;
+    color: black;
+}
 
 .product-list-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 15px 0 0;
+    margin-bottom: 14px;
 }
 
 .category-title {
     font-size: 3rem;
+
     font-weight: 700;
     color: var(--main-page-color);
 }
 
 .category-sort-options {
     font-size: 1.4rem;
+
 }
 
 .product-list-container {
     padding-right: 15px;
 }
 
+.product-img-wrap{
+    height: 23.5rem;
+    width: 23.5rem;
+}
+
 .product-items {
     margin-bottom: 20px;
+}
+
+.product-name {
+    font-size: 1.5rem;
+    font-weight: 600;
 }
 
 .pagination {
@@ -112,7 +173,21 @@ input[type=number] {
     justify-content: center;
     height: 5rem;
 }
+/* netbean pagination css */
+.page-item.active .page-link {
+    z-index: 3;
+    color: #fff;
+    background-color: #648DE5;
+    border-color: #648DE5;
+}
 
+.page-item{
+    color: #648DE5;
+    font-size: 1.6rem;
+    min-width: 3rem;
+}
+
+/* VS css */
 .page-node {
     font-size: 1.5rem;
     font-weight: 400;
@@ -133,9 +208,10 @@ input[type=number] {
     margin-bottom: 40px;
 }
 
-.product-detail-wrap{
+.product-detail-wrap {
     padding: 0;
-    width: 46.5rem;
+    width: 42.5rem;
+    height: 42.5rem !important;
 }
 
 .product-wrap {
@@ -205,4 +281,77 @@ input[type=number] {
 
 .product-detail-des p {
     font-size: 1.6rem;
+}
+
+/* Search product by name page css */
+
+
+.search-product-container {
+    padding: 30px 0 0;
+}
+
+.search-heading-page {
+    text-align: center;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    position: relative;
+}
+
+.header-text-container::after {
+    content: "";
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid black;
+    width: 8rem;
+}
+
+.search-product-title {
+    color: var(--main-page-color);
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 2;
+}
+
+.search-quantity-result{
+    font-size: 14px;
+}
+
+.search-form-container {
+    position: absolute;
+    top: 58%;
+    right: 5%;
+}
+
+.search-by-name-wrapper {
+    position: relative;
+}
+
+.search-product-name {
+    outline: none;
+    font-size: 16px;
+    padding: 6px 26px 6px 10px;
+}
+
+.search-submit-btn {
+    position: absolute;
+    left: 84%;
+    bottom: 14%;
+    width: 30px;
+    height: 30px;
+}
+.search-submit-btn:hover {
+    rotate: -10deg;
+}
+
+.searched-content {
+    font-size: 1.4rem;
+    margin: 30px 16px 30px;
+}
+
+.product-items {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
